Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Đề xuất miễn giảm thuế để thu hút công nghệ chiến lược",
+    "content": "Bộ Khoa học và Công nghệ đã đề xuất các ưu đãi thuế hấp dẫn nhằm thu hút nhà đầu tư nước ngoài chuyển giao công nghệ chiến lược vào Việt Nam. Theo dự thảo, nhà đầu tư sẽ được miễn thuế thu nhập trong 5 năm và giảm 50% thuế trong 10 năm tiếp theo, cùng với các hỗ trợ khác như giảm tiền thuê đất. Chính sách này nhằm khuyến khích doanh nghiệp ứng dụng khoa học và công nghệ, đồng thời thúc đẩy chuyển giao tri thức và đào tạo nhân lực.",
+    "link": "https://vnexpress.net/de-xuat-mien-giam-thue-de-thu-hut-cong-nghe-chien-luoc-4861259.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Các ưu đãi thuế nào được đề xuất để thu hút công nghệ chiến lược vào Việt Nam?",
+    "answers": [
+      {
+        "text": "Miễn thuế thu nhập 5 năm và giảm 50% thuế trong 10 năm tiếp theo.",
+        "correct": true
+      },
+      {
+        "text": "Tăng thuế suất thuế thu nhập trong 10 năm đầu.",
+        "correct": false
+      },
+      {
+        "text": "Không có ưu đãi nào cho nhà đầu tư nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ miễn thuế cho các doanh nghiệp trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Virus thủy đậu gây zona thần kinh tấn công não",
     "content": "Bà Thoa, 56 tuổi, đã mắc biến chứng viêm màng não do virus Varicella zoster (gây bệnh thủy đậu) tấn công não. Bà có triệu chứng đau đầu dữ dội, sốt cao và chóng mặt, và được điều trị khẩn cấp tại Bệnh viện Đa khoa Tâm Anh TP HCM. Dù virus này không phổ biến gây viêm não, nhưng nó có thể diễn tiến nhanh và nguy hiểm, đặc biệt ở người lớn tuổi và những người suy giảm miễn dịch. Sau 12 ngày điều trị, sức khỏe bà Thoa đã cải thiện và virus đã không còn trong dịch não tủy.",
     "link": "https://vnexpress.net/virus-thuy-dau-gay-zona-than-kinh-tan-cong-nao-4860734.html",
@@ -1093,37 +1120,6 @@
     ]
   },
   {
-    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
-    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
-    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
-    "answers": [
-      {
-        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe không tốn nhiều xăng khi chạy.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có nhiều màu sắc lựa chọn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
     "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
     "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
@@ -1173,6 +1169,37 @@
       },
       {
         "text": "Cắt túi mật hoàn toàn không cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
+    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
+    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
+    "answers": [
+      {
+        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe không tốn nhiều xăng khi chạy.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có nhiều màu sắc lựa chọn.",
         "correct": false
       }
     ]
@@ -2890,55 +2917,28 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 8,
     "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
     "answers": [
       {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
         "correct": true
       },
       {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "text": "Vì tiêm vaccine là bắt buộc.",
         "correct": false
       },
       {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "text": "Để giảm cân.",
         "correct": false
       },
       {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -2971,28 +2971,55 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
     "cat": "suc-khoe",
-    "positivity": 8,
+    "positivity": 7,
     "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
     "answers": [
       {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
         "correct": true
       },
       {
-        "text": "Vì tiêm vaccine là bắt buộc.",
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
         "correct": false
       },
       {
-        "text": "Để giảm cân.",
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
         "correct": false
       },
       {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -4006,6 +4033,33 @@
     ]
   },
   {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -4032,33 +4086,6 @@
       },
       {
         "text": "29/3 và 30/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -4408,28 +4435,32 @@
     ]
   },
   {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "title": "Áp lực học khiến nữ sinh 14 tuổi trầm cảm",
+    "content": "Bài viết đề cập đến trường hợp một nữ sinh 14 tuổi ở Hà Nội, bị trầm cảm do áp lực học tập và kỳ vọng từ gia đình. Cô bé cảm thấy chán nản, lo lắng về thành tích học tập và thường xuyên có ý tưởng tự sát. Các bác sĩ cho biết tình trạng trầm cảm ở lứa tuổi vị thành niên đang gia tăng, đặc biệt là ở những học sinh xuất sắc. Bài viết cũng khuyến cáo gia đình cần quan tâm, lắng nghe và tạo môi trường an toàn cho trẻ để giảm bớt áp lực.",
+    "link": "https://vnexpress.net/ap-luc-hoc-khien-nu-sinh-14-tuoi-tram-cam-4860665.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Tại sao nữ sinh 14 tuổi lại bị trầm cảm?",
     "answers": [
       {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "text": "Do áp lực học tập và kỳ vọng từ gia đình",
         "correct": true
       },
       {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "text": "Vì không thích học hành",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "text": "Vì không có bạn bè",
         "correct": false
       },
       {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "text": "Do bị ốm nặng",
+        "correct": false
+      },
+      {
+        "text": "Vì thích chơi game hơn học",
         "correct": false
       }
     ]
@@ -4462,32 +4493,28 @@
     ]
   },
   {
-    "title": "Áp lực học khiến nữ sinh 14 tuổi trầm cảm",
-    "content": "Bài viết đề cập đến trường hợp một nữ sinh 14 tuổi ở Hà Nội, bị trầm cảm do áp lực học tập và kỳ vọng từ gia đình. Cô bé cảm thấy chán nản, lo lắng về thành tích học tập và thường xuyên có ý tưởng tự sát. Các bác sĩ cho biết tình trạng trầm cảm ở lứa tuổi vị thành niên đang gia tăng, đặc biệt là ở những học sinh xuất sắc. Bài viết cũng khuyến cáo gia đình cần quan tâm, lắng nghe và tạo môi trường an toàn cho trẻ để giảm bớt áp lực.",
-    "link": "https://vnexpress.net/ap-luc-hoc-khien-nu-sinh-14-tuoi-tram-cam-4860665.html",
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Tại sao nữ sinh 14 tuổi lại bị trầm cảm?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
     "answers": [
       {
-        "text": "Do áp lực học tập và kỳ vọng từ gia đình",
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
         "correct": true
       },
       {
-        "text": "Vì không thích học hành",
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
         "correct": false
       },
       {
-        "text": "Vì không có bạn bè",
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
         "correct": false
       },
       {
-        "text": "Do bị ốm nặng",
-        "correct": false
-      },
-      {
-        "text": "Vì thích chơi game hơn học",
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
