Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Alcaraz lần thứ tư liên tiếp vào bán kết Indian Wells",
+    "content": "Carlos Alcaraz đã giành chiến thắng trước Francisco Cerundolo với tỉ số 6-3, 7-6(4), trở thành người thứ ba trong lịch sử vào bán kết Indian Wells bốn lần liên tiếp. Alcaraz đã phải trải qua một trận đấu khó khăn, đặc biệt là trong set hai khi đối mặt với chín break-point. Tay vợt 21 tuổi này đã thể hiện khả năng cứu bóng xuất sắc và duy trì nhịp chơi để giành chiến thắng. Với chiến thắng này, Alcaraz tiếp tục nuôi hy vọng trở thành người trẻ nhất có ba lần liên tiếp vô địch tại Indian Wells.",
+    "link": "https://vnexpress.net/alcaraz-lan-thu-tu-lien-tiep-vao-ban-ket-indian-wells-4861375.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Carlos Alcaraz đã thắng ai để vào bán kết Indian Wells?",
+    "answers": [
+      {
+        "text": "Francisco Cerundolo",
+        "correct": true
+      },
+      {
+        "text": "Rafael Nadal",
+        "correct": false
+      },
+      {
+        "text": "Novak Djokovic",
+        "correct": false
+      },
+      {
+        "text": "Jack Draper",
+        "correct": false
+      },
+      {
+        "text": "Daniil Medvedev",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sếp người Thái nhận lương cao nhất ở Nhựa Bình Minh xin nghỉ",
     "content": "Hội đồng quản trị Công ty cổ phần Nhựa Bình Minh đã miễn nhiệm tổng giám đốc Chaowalist Treejak do lý do sức khỏe, và người thay thế ông là Niwat Athiwattananont. Ông Chaowalist Treejak hiện đang nhận mức lương cao nhất tại công ty, gần 6,2 tỷ đồng cho năm 2024, và sẽ tiếp tục làm việc đến hết ngày 31-5. Sau khi ông nghỉ, Niwat sẽ đảm nhiệm chức vụ tổng giám đốc trong vòng 5 năm tới.",
     "link": "https://tuoitre.vn/sep-nguoi-thai-nhan-luong-cao-nhat-o-nhua-binh-minh-xin-nghi-20250314141003305.htm",
@@ -617,6 +648,33 @@
       },
       {
         "text": "Vào tháng 8",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Quen bạn trai tỷ phú USD, ca sĩ Camila Cabello thăng hạng gu thời trang",
+    "content": "Camila Cabello đã thu hút sự chú ý tại Tuần lễ Thời trang Paris Thu - Đông 2025 khi xuất hiện cùng bạn trai tỷ phú USD Henry Junior Chalhoub. Cô diện một bộ vest của Chanel, thể hiện phong cách thanh lịch và quyến rũ, khác hẳn với hình ảnh nổi loạn trước đây. Sự thay đổi này không chỉ phản ánh sự ảnh hưởng từ mối quan hệ tình cảm mà còn đánh dấu sự thăng hạng trong gu thời trang của cô, hướng đến hình ảnh một biểu tượng thời trang hiện đại.",
+    "link": "https://dantri.com.vn/giai-tri/quen-ban-trai-ty-phu-usd-ca-si-camila-cabello-thang-hang-gu-thoi-trang-20250314104915141.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Camila Cabello đã thay đổi phong cách thời trang ra sao khi hẹn hò với bạn trai tỷ phú?",
+    "answers": [
+      {
+        "text": "Cô trở nên thanh lịch và quyến rũ hơn.",
+        "correct": true
+      },
+      {
+        "text": "Cô vẫn giữ phong cách nổi loạn như trước.",
+        "correct": false
+      },
+      {
+        "text": "Cô không thay đổi gì cả.",
+        "correct": false
+      },
+      {
+        "text": "Cô chuyển sang phong cách thể thao.",
         "correct": false
       }
     ]
@@ -1472,33 +1530,6 @@
     ]
   },
   {
-    "title": "Cắt túi mật có giảm tuổi thọ?",
-    "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
-    "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cắt túi mật có ảnh hưởng đến tuổi thọ không?",
-    "answers": [
-      {
-        "text": "Không, cắt túi mật không giảm tuổi thọ.",
-        "correct": true
-      },
-      {
-        "text": "Có, cắt túi mật làm giảm tuổi thọ.",
-        "correct": false
-      },
-      {
-        "text": "Cắt túi mật chỉ ảnh hưởng đến tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Cắt túi mật hoàn toàn không cần thiết.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
     "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
     "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
@@ -1552,6 +1583,33 @@
       },
       {
         "text": "Nên ăn thịt nướng hàng ngày.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cắt túi mật có giảm tuổi thọ?",
+    "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
+    "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cắt túi mật có ảnh hưởng đến tuổi thọ không?",
+    "answers": [
+      {
+        "text": "Không, cắt túi mật không giảm tuổi thọ.",
+        "correct": true
+      },
+      {
+        "text": "Có, cắt túi mật làm giảm tuổi thọ.",
+        "correct": false
+      },
+      {
+        "text": "Cắt túi mật chỉ ảnh hưởng đến tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Cắt túi mật hoàn toàn không cần thiết.",
         "correct": false
       }
     ]
@@ -2260,33 +2318,6 @@
     ]
   },
   {
-    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
-    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
-    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
-    "answers": [
-      {
-        "text": "Vì lái xe khi bị tước bằng lái",
-        "correct": true
-      },
-      {
-        "text": "Vì vi phạm quy định giao thông khác",
-        "correct": false
-      },
-      {
-        "text": "Vì không có bảo hiểm xe",
-        "correct": false
-      },
-      {
-        "text": "Vì lái xe trong tình trạng say xỉn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Quả bom' dân số già của Malaysia",
     "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
     "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
@@ -2318,28 +2349,28 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
+    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
+    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
+    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
+    "cat": "phap-luat",
+    "positivity": 1,
     "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Vì lái xe khi bị tước bằng lái",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Vì vi phạm quy định giao thông khác",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Vì không có bảo hiểm xe",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -2367,6 +2398,33 @@
       },
       {
         "text": "Vì không có thời gian để tập luyện.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "answers": [
+      {
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "correct": true
+      },
+      {
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "correct": false
+      },
+      {
+        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "correct": false
+      },
+      {
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -3269,28 +3327,28 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
     "answers": [
       {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
         "correct": true
       },
       {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "text": "Vì tiêm vaccine là bắt buộc.",
         "correct": false
       },
       {
-        "text": "Vì không thích kết quả thẩm mỹ.",
+        "text": "Để giảm cân.",
         "correct": false
       },
       {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -3323,33 +3381,6 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
-    "answers": [
-      {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Vì tiêm vaccine là bắt buộc.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm cân.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
     "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
     "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
@@ -3372,6 +3403,33 @@
       },
       {
         "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -4175,37 +4233,6 @@
       },
       {
         "text": "Soda, nước ép trái cây, trà sữa, nước tăng lực, trà đá",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Alcaraz sắp đuổi kịp Federer và Djokovic",
-    "content": "Carlos Alcaraz vừa có chiến thắng ấn tượng trước Grigor Dimitrov với tỷ số 6-1, 6-1 tại BNP Paribas Open, đánh dấu trận thắng thứ 15 liên tiếp của anh. Với phong độ ổn định, Alcaraz đang tiến gần đến các kỷ lục của Federer và Djokovic, những người đã từng vô địch liên tiếp tại Indian Wells. Nếu Alcaraz bảo vệ thành công danh hiệu năm nay, anh sẽ có cơ hội bắt kịp thành tích của Federer. Tay vợt 21 tuổi này bày tỏ sự tự tin và sẵn sàng cho thử thách tiếp theo ở tứ kết.",
-    "link": "https://vnexpress.net/alcaraz-sap-duoi-kip-federer-va-djokovic-4860912.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Alcaraz có thể bắt kịp kỷ lục của ai tại BNP Paribas Open?",
-    "answers": [
-      {
-        "text": "Federer và Djokovic",
-        "correct": true
-      },
-      {
-        "text": "Nadal và Murray",
-        "correct": false
-      },
-      {
-        "text": "Sampras và Agassi",
-        "correct": false
-      },
-      {
-        "text": "Monfils và Medvedev",
-        "correct": false
-      },
-      {
-        "text": "Thiem và Zverev",
         "correct": false
       }
     ]
