--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -653,6 +653,33 @@
     ]
   },
   {
+    "title": "Nga cảnh báo cuộc chiến dưới nước với NATO",
+    "content": "Nga đã cáo buộc NATO đang phát triển các phương pháp mới để tấn công vào cơ sở hạ tầng hàng hải và tàu chở dầu của họ. Ông Nikolay Patrushev, trợ lý của Tổng thống Nga, cho biết NATO đang tiến hành các cuộc tấn công mạng nhằm vào thiết bị dẫn đường của tàu Nga. Nga cũng chỉ trích việc NATO tăng cường hoạt động quân sự gần biên giới của họ, cho rằng điều này đe dọa đến sự ổn định trong khu vực.",
+    "link": "https://dantri.com.vn/the-gioi/nga-canh-bao-cuoc-chien-duoi-nuoc-voi-nato-20250314141810178.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Nga đã cảnh báo về điều gì liên quan đến NATO?",
+    "answers": [
+      {
+        "text": "NATO đang phát triển các phương pháp tấn công vào cơ sở hạ tầng hàng hải của Nga.",
+        "correct": true
+      },
+      {
+        "text": "Nga sẽ hợp tác với NATO để cải thiện an ninh hàng hải.",
+        "correct": false
+      },
+      {
+        "text": "NATO không có kế hoạch nào đối với Nga.",
+        "correct": false
+      },
+      {
+        "text": "Nga đã ngừng mọi hoạt động quân sự với NATO.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quen bạn trai tỷ phú USD, ca sĩ Camila Cabello thăng hạng gu thời trang",
     "content": "Camila Cabello đã thu hút sự chú ý tại Tuần lễ Thời trang Paris Thu - Đông 2025 khi xuất hiện cùng bạn trai tỷ phú USD Henry Junior Chalhoub. Cô diện một bộ vest của Chanel, thể hiện phong cách thanh lịch và quyến rũ, khác hẳn với hình ảnh nổi loạn trước đây. Sự thay đổi này không chỉ phản ánh sự ảnh hưởng từ mối quan hệ tình cảm mà còn đánh dấu sự thăng hạng trong gu thời trang của cô, hướng đến hình ảnh một biểu tượng thời trang hiện đại.",
     "link": "https://dantri.com.vn/giai-tri/quen-ban-trai-ty-phu-usd-ca-si-camila-cabello-thang-hang-gu-thoi-trang-20250314104915141.htm",
@@ -1530,32 +1557,28 @@
     ]
   },
   {
-    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
-    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
-    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
-    "cat": "oto-xe-may",
+    "title": "Cắt túi mật có giảm tuổi thọ?",
+    "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
+    "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
+    "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
+    "question": "Cắt túi mật có ảnh hưởng đến tuổi thọ không?",
     "answers": [
       {
-        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
+        "text": "Không, cắt túi mật không giảm tuổi thọ.",
         "correct": true
       },
       {
-        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
+        "text": "Có, cắt túi mật làm giảm tuổi thọ.",
         "correct": false
       },
       {
-        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
+        "text": "Cắt túi mật chỉ ảnh hưởng đến tiêu hóa.",
         "correct": false
       },
       {
-        "text": "Vì xe không tốn nhiều xăng khi chạy.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có nhiều màu sắc lựa chọn.",
+        "text": "Cắt túi mật hoàn toàn không cần thiết.",
         "correct": false
       }
     ]
@@ -1588,28 +1611,32 @@
     ]
   },
   {
-    "title": "Cắt túi mật có giảm tuổi thọ?",
-    "content": "Cắt túi mật không làm giảm tuổi thọ của người bệnh. Sau phẫu thuật, gan sẽ tiếp tục sản xuất dịch mật và đưa trực tiếp vào ruột non, giúp tiêu hóa thức ăn. Mặc dù người bệnh có thể gặp một số triệu chứng khó chịu trong thời gian đầu như đau và rối loạn tiêu hóa, nhưng sau khoảng ba tháng, cơ thể sẽ thích nghi và các triệu chứng này sẽ giảm dần. Việc tuân thủ chỉ định của bác sĩ và chăm sóc sức khỏe hợp lý là rất quan trọng sau phẫu thuật.",
-    "link": "https://vnexpress.net/cat-tui-mat-co-giam-tuoi-tho-4861170.html",
-    "cat": "suc-khoe",
+    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
+    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
+    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
+    "cat": "oto-xe-may",
     "positivity": 8,
     "importance": 7,
-    "question": "Cắt túi mật có ảnh hưởng đến tuổi thọ không?",
+    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
     "answers": [
       {
-        "text": "Không, cắt túi mật không giảm tuổi thọ.",
+        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
         "correct": true
       },
       {
-        "text": "Có, cắt túi mật làm giảm tuổi thọ.",
+        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
         "correct": false
       },
       {
-        "text": "Cắt túi mật chỉ ảnh hưởng đến tiêu hóa.",
+        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
         "correct": false
       },
       {
-        "text": "Cắt túi mật hoàn toàn không cần thiết.",
+        "text": "Vì xe không tốn nhiều xăng khi chạy.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có nhiều màu sắc lựa chọn.",
         "correct": false
       }
     ]
@@ -2318,37 +2345,6 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
-    "answers": [
-      {
-        "text": "Già hóa dân số",
-        "correct": true
-      },
-      {
-        "text": "Tỷ lệ sinh tăng",
-        "correct": false
-      },
-      {
-        "text": "Thiếu lao động trẻ",
-        "correct": false
-      },
-      {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
     "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
     "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
@@ -2425,6 +2421,37 @@
       },
       {
         "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "answers": [
+      {
+        "text": "Già hóa dân số",
+        "correct": true
+      },
+      {
+        "text": "Tỷ lệ sinh tăng",
+        "correct": false
+      },
+      {
+        "text": "Thiếu lao động trẻ",
+        "correct": false
+      },
+      {
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -3354,33 +3381,6 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
-    "answers": [
-      {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
-        "correct": true
-      },
-      {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
-        "correct": false
-      },
-      {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
-        "correct": false
-      },
-      {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
     "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
     "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
@@ -3430,6 +3430,33 @@
       },
       {
         "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "answers": [
+      {
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "correct": true
+      },
+      {
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "correct": false
+      },
+      {
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "correct": false
+      },
+      {
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
@@ -3547,28 +3574,28 @@
     ]
   },
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
     "cat": "the-thao",
-    "positivity": 3,
+    "positivity": 4,
     "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
     "answers": [
       {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
         "correct": true
       },
       {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
         "correct": false
       },
       {
-        "text": "Vì ông không đủ điều kiện tài chính",
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
         "correct": false
       },
       {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
@@ -3601,28 +3628,28 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
     "cat": "the-thao",
-    "positivity": 4,
+    "positivity": 3,
     "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
     "answers": [
       {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
         "correct": true
       },
       {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
         "correct": false
       },
       {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "text": "Vì ông không đủ điều kiện tài chính",
         "correct": false
       },
       {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -4496,33 +4523,6 @@
       },
       {
         "text": "17.898 đồng/lít",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đầu tư 100 tỷ đồng mở rộng bến phà ra đảo Cát Bà",
-    "content": "Dự án mở rộng bến phà Đồng Bài - Cái Viềng nối liền đất liền với đảo Cát Bà sẽ được đầu tư gần 100 tỷ đồng bởi UBND huyện Cát Hải. Mục tiêu của dự án là cải thiện cơ sở hạ tầng bến phà, giảm ùn tắc vào mùa cao điểm cho du lịch. Các cải tạo sẽ bao gồm mở rộng bến, xây dựng nhà chờ và nâng cấp các tiện ích nhằm phục vụ lượng khách du lịch ngày càng tăng. Đảo Cát Bà hiện đang thu hút hàng trăm nghìn lượt khách tham quan mỗi năm, đặc biệt là vào mùa hè.",
-    "link": "https://vnexpress.net/dau-tu-100-ty-dong-mo-rong-ben-pha-ra-dao-cat-ba-4860787.html",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án mở rộng bến phà Đồng Bài - Cái Viềng có mục đích gì?",
-    "answers": [
-      {
-        "text": "Cải thiện cơ sở hạ tầng bến phà và giảm ùn tắc cho du lịch.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường số lượng phà hoạt động.",
-        "correct": false
-      },
-      {
-        "text": "Giảm giá vé cho hành khách.",
-        "correct": false
-      },
-      {
-        "text": "Xây dựng thêm nhiều nhà hàng trên đảo.",
         "correct": false
       }
     ]
