--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -1696,37 +1696,6 @@
     ]
   },
   {
-    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
-    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
-    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
-    "answers": [
-      {
-        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe không tốn nhiều xăng khi chạy.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe có nhiều màu sắc lựa chọn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người bệnh ung thư có nên kiêng thịt nướng?",
     "content": "Người bệnh ung thư nên hạn chế tiêu thụ thịt nướng do các hợp chất độc hại có thể hình thành trong quá trình nướng, gây tăng nguy cơ mắc ung thư hoặc làm nặng thêm triệu chứng bệnh. Mặc dù không cần phải kiêng hoàn toàn, người bệnh nên ăn có chừng mực và ưu tiên các phương pháp chế biến lành mạnh hơn như hấp hoặc luộc. Việc tiêu thụ thịt nướng cần được kết hợp với nhiều rau củ và đủ nước để hỗ trợ tiêu hóa và giảm tác động tiêu cực của các chất độc hại. Chế độ ăn uống phù hợp sẽ giúp tăng cường hệ miễn dịch và hỗ trợ hồi phục sau điều trị.",
     "link": "https://vnexpress.net/nguoi-benh-ung-thu-co-nen-kieng-thit-nuong-4861212.html",
@@ -1776,6 +1745,37 @@
       },
       {
         "text": "Cắt túi mật hoàn toàn không cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Yếu tố thuyết phục khách nữ của Toyota Vios",
+    "content": "Bài viết phân tích yếu tố thuyết phục khách hàng nữ khi chọn mua Toyota Vios, đặc biệt là những gia đình trẻ. Toyota Vios được ưa chuộng nhờ thiết kế hiện đại, tính năng an toàn cao và khả năng tiết kiệm nhiên liệu, phù hợp với nhu cầu của phụ nữ lái xe. Những công nghệ hỗ trợ lái và thiết kế tiện nghi của Vios đã giúp chiếc xe này trở thành lựa chọn hàng đầu trong phân khúc sedan cỡ B tại Việt Nam.",
+    "link": "https://vnexpress.net/yeu-to-thuyet-phuc-khach-nu-cua-toyota-vios-4858857.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao khách hàng nữ lại chọn Toyota Vios?",
+    "answers": [
+      {
+        "text": "Vì xe có thiết kế hiện đại và tính năng an toàn cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe có động cơ mạnh mẽ hơn các mẫu khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có giá bán thấp nhất trên thị trường.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe không tốn nhiều xăng khi chạy.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe có nhiều màu sắc lựa chọn.",
         "correct": false
       }
     ]
@@ -2399,6 +2399,33 @@
     ]
   },
   {
+    "title": "Chiến sự Ukraine 14/3: Nga cấp tốc thực hiện mệnh lệnh thép của ông Putin",
+    "content": "Vào ngày 14/3, Nga đã tiến hành tấn công vào các ngôi làng ở tỉnh Sumy, thực hiện mệnh lệnh của Tổng thống Vladimir Putin nhằm giải tỏa Kursk và thiết lập một vùng đệm an ninh. Cuộc tấn công này diễn ra trong bối cảnh Nga đã kiểm soát hoàn toàn Sudzha tại Kursk và lực lượng Ukraine đang phải rút lui. Các chuyên gia cho rằng Nga có thể thúc đẩy Mỹ xem xét lại thỏa thuận ngừng bắn với Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-143-nga-cap-toc-thuc-hien-menh-lenh-thep-cua-ong-putin-20250314063957302.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Nga tấn công các ngôi làng ở tỉnh Sumy vào ngày 14/3?",
+    "answers": [
+      {
+        "text": "Để hỗ trợ quân đội Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Để bảo vệ biên giới của Nga.",
+        "correct": false
+      },
+      {
+        "text": "Để đáp trả một cuộc tấn công từ Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Để thực hiện mệnh lệnh của Tổng thống Putin nhằm giải tỏa Kursk.",
+        "correct": true
+      }
+    ]
+  },
+  {
     "title": "Antony ghi bàn, lập cú đúp kiến tạo ở Conference League",
     "content": "Trong trận lượt về vòng 1/8 Conference League, Antony đã có màn trình diễn xuất sắc giúp Real Betis đánh bại Guimaraes 4-0. Anh ghi một bàn và có hai pha kiến tạo, góp phần vào chiến thắng chung cuộc 6-2 của Betis. Antony đã thể hiện khả năng chơi bóng ấn tượng, với bốn bàn thắng và năm pha kiến tạo sau 10 trận cho Betis.",
     "link": "https://vnexpress.net/antony-ghi-ban-lap-cu-dup-kien-tao-o-conference-league-4861096.html",
@@ -2511,32 +2538,28 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
+    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
+    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Vì muốn tập ở không gian đông đúc.",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
+        "text": "Vì không có thời gian để tập luyện.",
         "correct": false
       }
     ]
@@ -2569,28 +2592,32 @@
     ]
   },
   {
-    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
-    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
-    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
     "answers": [
       {
-        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
+        "text": "Già hóa dân số",
         "correct": true
       },
       {
-        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
+        "text": "Tỷ lệ sinh tăng",
         "correct": false
       },
       {
-        "text": "Vì muốn tập ở không gian đông đúc.",
+        "text": "Thiếu lao động trẻ",
         "correct": false
       },
       {
-        "text": "Vì không có thời gian để tập luyện.",
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -3493,33 +3520,6 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
-    "answers": [
-      {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
-        "correct": true
-      },
-      {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
-        "correct": false
-      },
-      {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
-        "correct": false
-      },
-      {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
     "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
@@ -3542,6 +3542,33 @@
       },
       {
         "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "answers": [
+      {
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "correct": true
+      },
+      {
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "correct": false
+      },
+      {
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "correct": false
+      },
+      {
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
@@ -4484,33 +4511,6 @@
       },
       {
         "text": "Vì nó gây ra nhiều khó khăn cho nền kinh tế.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Arteta: 'Arsenal cần làm gì đó độc nhất để đánh bại Real'",
-    "content": "HLV Mikel Arteta của Arsenal đã nhấn mạnh sự cần thiết phải có một chiến lược độc đáo để đánh bại Real Madrid trong trận tứ kết Champions League sắp tới. Sau khi vượt qua PSV, Arteta cho biết Arsenal cần học hỏi từ thất bại trước Bayern mùa trước và tận dụng lợi thế sân nhà ở lượt đi. Ông kêu gọi người hâm mộ tạo bầu không khí đặc biệt để hỗ trợ đội bóng, đồng thời khẳng định rằng Arsenal quyết tâm tiến xa hơn trong giải đấu này.",
-    "link": "https://vnexpress.net/arteta-arsenal-can-lam-gi-do-doc-nhat-de-danh-bai-real-4860865.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Arsenal cần làm gì để đánh bại Real Madrid ở tứ kết Champions League?",
-    "answers": [
-      {
-        "text": "Có một chiến lược độc đáo",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần thi đấu theo cách bình thường",
-        "correct": false
-      },
-      {
-        "text": "Tập trung vào phòng ngự",
-        "correct": false
-      },
-      {
-        "text": "Tránh để cầu thủ chấn thương",
         "correct": false
       }
     ]
